tests/specs/test/report_error/main.out
running 2 tests from [WILDCARD]/main.ts
foo ...
Uncaught error from [WILDCARD]/main.ts FAILED
foo ... cancelled (0ms)
bar ... cancelled (0ms)

 ERRORS 

[WILDCARD]/main.ts (uncaught error)
error: Error: foo
  reportError(new Error("foo"));
              ^
    at [WILDCARD]/main.ts:2:15
This error was not caught from a test and caused the test runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

 FAILURES 

[WILDCARD]/main.ts (uncaught error)

FAILED | 0 passed | 3 failed ([WILDCARD])

error: Test failed
